# timer

./: README.md
backend/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
backend/app/: main.py
backend/app/e2e/: __init__.py  e2e_controller.py  permissions.py  test_e2e_api.py
backend/app/timer/: cli.py  models.py  permissions.py  repositories.py  services.py
backend/app/timer/api/: __init__.py  athlete_controller.py  lap_controller.py  race_athlete_controller.py  race_controller.py
backend/app/timer/fixtures/: races.yaml
backend/app/timer/tests/: conftest.py  test_project_controller.py  test_project_service.py
backend/lab/: __init__.py  settings.py
backend/lab/auth/: auth_cli.py  auth_core.py  auth_events.py  middleware.py  permissions.py
backend/lab/auth/api/: __init__.py  account_controller.py  permission_controller.py  role_controller.py  user_controller.py
backend/lab/auth/fixtures/: auth.yaml
backend/lab/auth/models/: __init__.py  auth_association_models.py  auth_code_model.py  permission_model.py  role_model.py  user_model.py
backend/lab/auth/repositories/: __init__.py  auth_code_repository.py  permission_repository.py  role_permissions_repository.py  role_repository.py  user_repository.py  user_roles_repository.py
backend/lab/auth/services/: __init__.py  (+6 more)
backend/lab/core/: cli.py  database.py  mail.py  openapi.py
backend/migrations/versions/: 2025-09-14_init_838e657f604e.py  2025-09-14_init_project_ea7dcdd6fb96.py  2025-09-16_update_athlete_race_model_f1c0918846bd.py  2025-09-16_update_laps_df7b6ad9a0d5.py
(+117 files in other folders)
